# Autonomous-Robot-Platform-for-Fire-Prevention-in-Logistics-Warehouses-R-U-Hot

./: .gitignore  README copy.md  README.md  docker-compose.yml  package-lock.json
TIL/: TIL_한경훈.md
frontend/: .prettierrc.json  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  wget-log
frontend/nginx/: nginx.conf
frontend/public/: 1_map_20250807_150000.pgm  (+4 more)
robot/src/my_cartographer/: CMakeLists.txt  package.xml  setup.py
robot/src/my_cartographer/config/: camera.yaml  ekf.yaml  imu.yaml  my_nav_params.yaml  my_robot.lua  my_robot_localization.lua  my_robot_tmp.lua  nav2_params.yaml  nav2_params_ttmp.yaml  ydlidar.yaml
robot/src/my_cartographer/launch/: autonomous_exploration.launch.py  bringup_ackermann_nav2.launch.py  check_imu.launch.py  gyeongpunch.launch.py  my_robot.launch.py  now_slam_test.launch.py
robot/src/my_cartographer/maps/: my_map_final.pbstream  my_map_final.pgm  my_map_final.yaml  my_map_final_250814.pbstream  my_map_final_250814.pgm  my_map_final_250814.yaml  my_map_proom.pbstream  my_map_proom.pgm  my_map_proom.yaml
robot/src/my_cartographer/rviz/: cartographer_config.rviz  imu_test.rviz  nav2_slam_view.rviz
robot/src/my_cartographer/scripts/: initialpose_to_cartographer.py  initialpose_to_cartographer_tmp.py  kart_teleop.py  mqtt_nav_bridge.py  twist_to_ackermann.py
robot/src/my_cartographer/urdf/: my_robot.urdf  my_robot_tmp.urdf
robot/src/robot_location_publisher/: package.xml  setup.cfg  setup.py
robot/src/robot_location_publisher/robot_location_publisher/: location_publisher.py
server/: .gitignore  Dockerfile  pom.xml
slam-mqtt-server/: Dockerfile  main.py  requirements.txt
(+191 files in other folders)
