<?xml version="1.0"?>
<package format="3">
  <name>robot_location_publisher</name>
  <version>0.0.1</version>
  <description>Publish robot pose (TF) to MQTT (AWS IoT)</description>
  <maintainer email="a202@example.com">a202</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Python runtime dependencies -->
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-tf-transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
